# redpesk-binding-cpp-template

./: CMakeLists.txt  README.md  demo.config  main-manifest.yml  start.sh
CameraStream/: CMakeLists.txt  CameraReader.cpp
ObjectDetection/: CMakeLists.txt  ObjectDetection.cpp
conf.d/packaging/: camera-demo.spec
conf.d/wgt/: config.xml.in
redtest/: CMakeLists.txt
test/afb-test/: CMakeLists.txt  test-manifest.yml
test/afb-test/etc/: aft-CameraStream.json
test/afb-test/tests/: CameraStream.lua
